--- a/index.html
+++ b/index.html
@@ -146,13 +146,8 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary" >
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
-                        Book Now
-                      </a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -182,13 +177,8 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
-                        Book Now
-                      </a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -218,11 +208,8 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -252,11 +239,8 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -286,11 +270,8 @@
                       1400 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -320,11 +301,8 @@
                       1400 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -354,11 +332,8 @@
                       1600 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -388,11 +363,8 @@
                       1600 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                    <div class="hero-content">
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
