--- a/treatments.html
+++ b/treatments.html
@@ -30,9 +30,7 @@
 </head>
 
 <body id="top">
-  <!-- 
-    - #HEADER
-  -->
+  <!--- #HEADER-->
   <header class="header" data-header>
     <div class="container">
       <a href="treatments.html" class="logo">
@@ -153,7 +151,7 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
@@ -190,7 +188,7 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
@@ -225,7 +223,7 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
@@ -262,7 +260,7 @@
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a> 
                     </div>
                   </div>
@@ -301,7 +299,7 @@
                       1400 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
@@ -337,7 +335,7 @@
                       1400 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
@@ -372,7 +370,7 @@
                       1600 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
@@ -409,7 +407,7 @@
                       1600 kr. (60 min)
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
@@ -447,7 +445,7 @@
                 
                   </p>
                   <div class="card-progress">
-                    <div class="progress-wrapper">
+                    <div class="hero-content">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
