--- a/index.html
+++ b/index.html
@@ -100,12 +100,10 @@
       <section class="section video" aria-label="video">
         <div class="container">
           <div class="video-player text-center">
-            <h2 class="h2 text-center ">Alternativ Medicine 💆🏻‍♀️</h2>
-            <p class="hero-subtitle">
-              We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
-            </p>
-            <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/QSHJ-2v4odQ?si=wCWHVChET8UODyPK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2 class="h2 bg-dark text-center ">Experience the Ultimate Relaxation</h2>
+            <video controls poster="./assets/images/wellness-banner.webp" class="video-player">
+              <source src="./assets/videos/relax.mp4" type="video/mp4">
+            </video> 
           </div>
         </div>
       </section>
