--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
            </li>
 
           </ul>
-
+          <h3 class=" card-text text-center"> 👈🏻 Swipe to read more 👉🏻</h3>
         </div>
       </section>
 
@@ -401,10 +401,11 @@
                     <li>🩸 Oxygen and Nutrient Delivery</li>
                     <li>💪🏻 Enhanced removal of waste products and toxins</li>
                   </ul>
-                  <a href="wellness.html#blog-3" class="btn-link has-before" aria-label="Stress relief read more">
-                    Read More
+                  <p class="card-text">To read more
+                    <a href="wellness.html#blog-3" class="btn-link has-before" >
+                    Click here
                   </a>
-
+                  </p>    
                 </div>
 
               </div>
@@ -434,7 +435,9 @@
                     <li>             
                   </ul>
                 </div>
-                  <a href="fitness.html#blog-1" aria-label="Fitness Benefits read more" class="btn-link has-before">Read More</a>
+                <p class="card-text">
+                  To read more
+                  <a href="fitness.html#blog-1" aria-label="Fitness Benefits read more" class="btn-link has-before">Click here</a></p>
                 </div>
               </div>
             </li>
@@ -458,9 +461,9 @@
                   <p class="card-text">
                     Water is essential for your body to function properly. Aim to drink at least 8 glasses a day, and more if you're active.
                   </p>
-
-                  <a href="wellness.html#blog-2" class="btn-link has-before" aria-label="Healthy tips read more" >Read More</a>
-
+                  <p class="card-text"> To read more
+                    <a href="wellness.html#blog-2" class="btn-link has-before" >Click here</a>
+                  </p>
                 </div>
 
               </div>
@@ -486,14 +489,15 @@
                     1. Treat Yourself to a Relaxing Massage
                     A soothing massage melts away stress, relieves muscle tension, and improves circulation. 
                   </p>
-
-                  <a href="wellness.html#blog-1" class="btn-link has-before" aria-label="Pamper yourself read more">Read More</a>
-
+                  <p class="card text">To read more
+                  <a href="wellness.html#blog-1" class="btn-link has-before" aria-label="Pamper yourself read more">Click here</a>
+                  </p>
                 </div>
 
               </div>
             </li>
           </ul>
+          <h3 class="text-center"> 👈🏻 Swipe to read more 👉🏻</h3>
         </div>
       </section>
 
