--- a/treatments.html
+++ b/treatments.html
@@ -454,14 +454,16 @@
            </li>
 
           </ul>
+          <h3 class=" card-text text-center"> 👈🏻 Swipe to read more 👉🏻</h3>
           <br>
+          <div>
           <p class="section-subtitle">
             Important Information 📝
           </p>
           <p class="section-subtitle" >
               Sports massage, Yoga massage and Stretch massage isn't typically recommended for pregnant women, individuals who have a history of high blood pressurem, diabetes,cancer, recent surgeries, open wounds, bleeding disorders, take blood thinners, have deep vein thrombosis, or have certain spinal conditions should also not get a massage. 
           </p>
-
+          </div>
         </div>
       </section>
 
