--- a/fitness.html
+++ b/fitness.html
@@ -324,7 +324,7 @@
             </li>
 
           </ul>
-
+          <h3 class=" card-text text-center"> 👈🏻 Swipe to read more 👉🏻</h3>
         </div>
       </section>
       <!-- /*************************/ -->
