--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@
                     <li>🩸 Oxygen and Nutrient Delivery</li>
                     <li>💪🏻 Enhanced removal of waste products and toxins</li>
                   </ul>
-                  <p class="card-text">To read more
-                    <a href="wellness.html#blog-3" class="btn-link has-before" >
-                    Click here
+                  <p class="card-text">Read more about
+                    <a href="wellness.html#blog-3" class="btn-link has-before" aria-label="Why Massage Works" >
+                    Why Massage Works
                   </a>
                   </p>    
                 </div>
@@ -436,8 +436,8 @@
                   </ul>
                 </div>
                 <p class="card-text">
-                  To read more
-                  <a href="fitness.html#blog-1" aria-label="Fitness Benefits read more" class="btn-link has-before">Click here</a></p>
+                  Read more about
+                  <a href="fitness.html#blog-1" aria-label="Fitness Benefits read more" class="btn-link has-before" aria-label="Fitness Benefits">Fitness Benefits</a></p>
                 </div>
               </div>
             </li>
@@ -461,8 +461,8 @@
                   <p class="card-text">
                     Water is essential for your body to function properly. Aim to drink at least 8 glasses a day, and more if you're active.
                   </p>
-                  <p class="card-text"> To read more
-                    <a href="wellness.html#blog-2" class="btn-link has-before" >Click here</a>
+                  <p class="card-text"> Read more about
+                    <a href="wellness.html#blog-2" class="btn-link has-before" aria-label="Self care" >Self care Tips</a>
                   </p>
                 </div>
 
@@ -489,8 +489,8 @@
                     1. Treat Yourself to a Relaxing Massage
                     A soothing massage melts away stress, relieves muscle tension, and improves circulation. 
                   </p>
-                  <p class="card text">To read more
-                  <a href="wellness.html#blog-1" class="btn-link has-before" aria-label="Pamper yourself read more">Click here</a>
+                  <p class="card-text">Read more about
+                  <a href="wellness.html#blog-1" class="btn-link has-before" aria-label="Pamper yourself read more">Pamper Yourself This Weekend</a>
                   </p>
                 </div>
 
