--- a/index.html
+++ b/index.html
@@ -75,17 +75,13 @@
         >
         <div class="container">
           <div class="hero-content">
-            <h2 class="hero-subtitle">Discover Relaxation and Wellness in the Heart of Stockholm</h2>
+            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
             <p class="hero-subtitle">
               <strong class="strong">The Best</strong>Massage and Wellness Hub
             </p>
-
-            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
-
+            
             <p class="section-text">
               Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins.</p>  
-
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
 
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
 
@@ -101,6 +97,8 @@
         <div class="container">
           <div class="video-player text-center">
             <h2 class="h2 bg-dark text-center ">Experience the Ultimate Relaxation</h2>
+            <P class="section-text">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
+            <br>
             <video controls poster="./assets/images/wellness-banner.webp" class="video-player">
               <source src="./assets/videos/relax.mp4" type="video/mp4">
             </video> 
