--- a/index.html
+++ b/index.html
@@ -364,9 +364,13 @@
                 </div>
               </div>
            </li>
-
+          
           </ul>
-          <h3 class=" card-text text-center"> 👈🏻 Swipe to read more 👉🏻</h3>
+          <div class="swipe" >
+          <img class="swipe-icon" src="./assets/images/swipe-left.svg"  alt="Swipe icon"> 
+          <h3 class=" card-text text-center"> Swipe to read more 
+          </h3>
+          </div>
         </div>
       </section>
 
@@ -495,7 +499,11 @@
               </div>
             </li>
           </ul>
-          <h3 class="text-center"> 👈🏻 Swipe to read more 👉🏻</h3>
+          <div class="swipe" >
+          <img class="swipe-icon" src="./assets/images/swipe-left.svg"  alt="Swipe icon"> 
+          <h3 class=" card-text text-center"> Swipe to read more 
+          </h3>
+          </div>
         </div>
       </section>
 
