--- a/treatments.html
+++ b/treatments.html
@@ -454,7 +454,11 @@
            </li>
 
           </ul>
-          <h3 class=" card-text text-center"> 👈🏻 Swipe to read more 👉🏻</h3>
+          <div class="swipe" >
+          <img class="swipe-icon" src="./assets/images/swipe-left.svg"  alt="Swipe icon"> 
+          <h3 class=" card-text text-center"> Swipe to read more 
+          </h3>
+          </div>
           <br>
           <div>
           <p class="section-subtitle">
@@ -468,8 +472,7 @@
       </section>
 
       <!--- #COMMENTS-->
-      <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
-        style="background-image: url('./assets/images/classes-bg.png')">
+      <section class="section class bg-dark has-bg-image" id="class" aria-label="class">
         <div class="container">
           <h2 class="h2 section-title text-center">Happy Customers 💆🏻‍♀️</h2>
           <p>Thank you for the great reviews 🙏🏻 We're thrilled to hear you enjoyed your massage session. Your satisfaction is our priority! We're delighted you felt relaxed and rejuvenated after your visit.We look forward to welcoming you back soon! </p>
