--- a/about.html
+++ b/about.html
@@ -284,6 +284,7 @@
 
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
+    Top
   </a>
 
   <!--- custom js link-->
