--- a/index.html
+++ b/index.html
@@ -692,9 +692,9 @@
     </div>
   </footer>
   <!--- #BACK TO TOP-->
-
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
+    Top
   </a>
 
 
