--- a/wellness.html
+++ b/wellness.html
@@ -667,6 +667,7 @@
 
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
+    Top
   </a>
 
 
