--- a/index.html
+++ b/index.html
@@ -635,60 +635,36 @@
 
         <ul class="footer-list">
           <li>
-            <p class="footer-list-title has-before">Tripadvisor Ranking</p>
+            <p class="footer-list-title has-before">Follow Us</p>
           </li>
 
-          <li>
-            <div id="TA_selfserveprop612" class="TA_selfserveprop">
-              <ul id="BW5Fht7U4K3" class="TA_links R7tpLWkA4">
-              <li id="uUooLc" class="a6i5suQ8">
-              <a target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g189852-d12631041-Reviews-Let_s_Relax_Stockholm-Stockholm.html">
-              
-              <img src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-11900-2.svg" alt="TripAdvisor"/>
-              </a>
-              </li>
-            </ul>
-            </div>
+          <li class="footer-list-item">
+              <a target="_blank" href="https://www.facebook.com/letsrelaxstockholm" class="social-link">
+              <ion-icon name="logo-facebook"></ion-icon> </a> 
+              <p>Facebook</p>
           </li>
 
-        </ul>
+          <li class="footer-list-item">
+            <a target="_blank" href="https://www.instagram.com/let_s_relax_stockholm" class="social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+            <p>Instagram</p>
+          </li>
+
+          <li class="footer-list-item">
+            <a target="_blank" href="https://www.linkedin.com/in/kunnikar/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+            <p>Linkedin</p>
+          </li>
+        </ul>  
       </div>
     </div>
 
     <div class="footer-bottom">
-      <div class="container">
-
         <p class="copyright">
-          &copy; 2024 F.I.T and Welllness| All Rights Reserved By <a target="_blank" href="https://github.com/KunnikarB" class="copyright-link">Kunnikar Boonbunlu</a>
-        </p>
-
-        <ul class="footer-bottom-list">
-
-          <li>
-            <ul class="social-list">
-
-              <li>
-                <a target="_blank" href="https://www.facebook.com/letsrelaxstockholm" class="social-link">
-                  <ion-icon name="logo-facebook"></ion-icon>
-                </a>
-              </li>
-
-              <li>
-                <a target="_blank" href="https://www.instagram.com/let_s_relax_stockholm" class="social-link">
-                  <ion-icon name="logo-instagram"></ion-icon>
-                </a>
-              </li>
-
-              <li>
-                <a target="_blank" href="https://www.linkedin.com/in/kunnikar/" class="social-link">
-                  <ion-icon name="logo-linkedin"></ion-icon>
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-
-      </div>
+          &copy; 2025 Let's Relax Stockholm | All Rights Reserved
+        </p>    
     </div>
   </footer>
   <!--- #BACK TO TOP-->
@@ -704,9 +680,6 @@
   <!-- Google review link -->
   <script src="https://static.elfsight.com/platform/platform.js" async></script>
 
-
-  <!-- tripadvisor review link -->
-  <script async src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=612&amp;locationId=12631041&amp;lang=en_US&amp;rating=true&amp;nreviews=5&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
 
   <!--- ionicon link-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
