--- a/about.html
+++ b/about.html
@@ -80,28 +80,29 @@
         <div class="container">
           <div class="hero-content">
             <h1 class="h1 hero-title">About Us</h1>
-            <h2 class="hero-subtitle">Your Partner in Wellness and Relaxation</h2>
+            
             <p class="hero-subtitle">
               <strong class="strong">The Best</strong>Massage and Wellness Hub
             </p>
-
-            <p class="section-text">
+            <br>
+            <p class="section-text-about">
               At Let's Relax Stockhom, we believe that wellness is more than a luxury—it's a lifestyle. Founded in Stockholm, our mission is to provide a sanctuary where you can escape the daily grind and embrace tranquility.
             </p>
-
-            <P class="hero-subtitle">Our highly trained team offers a range of services tailored to your individual needs, whether you're looking to ease muscle tension, recover from workouts, or simply unwind.</P>
-
-            <p class="section-text">We're proud to serve Stockholm's community, combining traditional massage techniques with modern wellness practices. Let us help you recharge, refocus, and rejuvenate.</p>
+            <br>
+            <p class="section-text-about">We're proud to serve Stockholm's community, combining traditional massage techniques with modern wellness practices. Let us help you recharge, refocus, and rejuvenate.</p>
 
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
 
           </div>
 
           <div class="hero-banner">
+            
             <img  src="./assets/images/profile.jpg" width="660" height="753" alt="hero banner" class="w-100 profile-about">
-           <h4 class="abs-img abs-img-1">Hi 👋🏻 </h4>
-            <h4 class="abs-img abs-img-2">I'm your Therapist 💆🏻‍♀️ </h4>
-          </div>
+           <h3 class="abs-img abs-img-1">I'm your Therapist 💆🏻‍♀️</h3>
+          <br>
+          <h3 class="hero-subtitle">Your Partner in Wellness and Relaxation</h3>
+          <br>
+          <P class="section-text-about">Our highly trained team offers a range of services tailored to your individual needs, whether you're looking to ease muscle tension, recover from workouts, or simply unwind.</P></div>
         </div>
       </section>
 
