--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           </div>
           <div class="hero-banner">
-            <img src="./assets/images/hero-banner.webp" width="660" height="753" alt="hero banner" class="w-100"> 
+            <img src="./assets/images/hero-banner.webp" width="350" height="350" alt="hero banner" class="w-100"> 
           </div>
         </div>
       </section>
@@ -100,7 +100,7 @@
             <P class="section-text">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
             <br>
             <video controls poster="./assets/images/wellness-banner.webp" class="video-player">
-              <source src="./assets/videos/relax.mp4" type="video/mp4">
+              <source src="./assets/videos/relax.mp4" type="video/mp4" width="450" height="450>
             </video> 
           </div>
         </div>
