--- a/fitness.html
+++ b/fitness.html
@@ -142,13 +142,13 @@
 
               <div class="about-coach">
                 <figure class="coach-avatar">
-                  <img src="./assets/images/coach.webp" width="80" loading="lazy" alt="Trainer">
+                  <img src="./assets/images/coach.webp" width="60" loading="lazy" alt="Trainer">
                 </figure>
 
                 <div class="container">
                   <h3 class="h3 coach-name">Kunnikar Boonbunlu</h3>
 
-                  <p class="coach-title">Fitness and Nutrition Coach</p>
+                  <p class="coach-title">Fitness Coach</p>
                 </div>
 
               </div>
@@ -157,18 +157,16 @@
 
           </div>  
         </div>
-        <br>
-        <br>
-        <div class="container">
-        <img src="./assets/blog/Diet-Nutrition.webp" alt="Nutrition and Diet certificate">
-        <br><br>
-        <img src="./assets/blog/Fittness .webp" alt="fitness certificate">
+        <div class="container-img">
+        <img src="./assets/blog/Diet-Nutrition.webp" alt="Nutrition and Diet certificate" width="400" height="400">
+        
+        <img src="./assets/blog/Fittness .webp" alt="fitness certificate" width="400" height="400">
         </div>
       </section>
 
 <!--- #Blog--->
       <!--- #BLOG-1-->
-      <section class="section class has-bg-image" id="blog-1" aria-label="class"
+      <section class="class has-bg-image" id="blog-1" aria-label="class"
         >
         <div class="container">
           <h2 class="h2 section-title text-center">Fitness Benefits </h2>
