--- a/wellness.html
+++ b/wellness.html
@@ -123,13 +123,13 @@
             <div class="wrapper">
               <div class="about-coach">
                 <figure class="coach-avatar">
-                  <img src="./assets/images/Health-coach.webp" width="80" loading="lazy" alt="Trainer">
+                  <img src="./assets/images/coach.webp" width="80" loading="lazy" alt="Trainer">
                 </figure>
 
                 <div class="container">
                   <h3 class="h3 coach-name">Kunnikar Boonbunlu</h3>
 
-                  <p class="coach-title">Health and Wellness Coach</p>
+                  <p class="coach-title">Wellness Coach</p>
                 </div>
 
               </div>
@@ -138,13 +138,14 @@
 
           </div> 
         
-
-        <img src="./assets/blog/Health-Wellness.webp" alt="Health and Wellness certificate" style="margin-top: 20px;">
+        <div class="container-img">
+        <img src="./assets/blog/Health-Wellness.webp" alt="Health and Wellness certificate" width="400" height="400" style="margin-top: 20px;">
+        </div>
         </div>  
       </section>
 
 <!--- #Wellness -->
-      <section class="section blog container" id="blog" aria-label="blog">
+      <section class=" blog container" id="blog" aria-label="blog">
         <div class="blog-feed">
           <h2 class="h2 section-title ">Latest Blog Feed 👩🏻‍💻</h2>
         </div>
