--- a/about.html
+++ b/about.html
@@ -106,24 +106,12 @@
         </div>
       </section>
 
-      
-     <!-- COMMENTS -->
-     <section class="section class has-bg-image" id="class" aria-label="class">
-        <div class="container">
-          <h2 class="h2 bd-pink section-title text-center">Happy Customers 💆🏻‍♀️</h2>
-          <p class="section-subtitle">Thank you for the great reviews 🙏🏻 We're thrilled to hear you enjoyed your massage session. Your satisfaction is our priority! We're delighted you felt relaxed and rejuvenated after your visit.We look forward to welcoming you back soon! </p>
-
-          <!-- Google review -->
-          <div class="elfsight-app-be61c573-0eba-472e-8a01-a2d0a7a4a160" hight="100px" data-elfsight-app-lazy></div>
-        
-      </div>
-     </section>
     </article>
   </main>
 
   <!--- #FOOTER-->
 
-  <footer class="footer">
+  <footer class="footer section">
 
     <div class="section footer-top bg-dark has-bg-image">
       <div class="container">
@@ -276,10 +264,6 @@
 
   <!--- custom js link-->
   <script src="./assets/js/script.js" defer></script>
-
-
-  <!-- Google review link -->
-  <script src="https://static.elfsight.com/platform/platform.js" async></script>
 
   <!--- ionicon link-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
