--- a/about.html
+++ b/about.html
@@ -14,6 +14,13 @@
   <link rel="shortcut icon" href="favicon-relax.png" type="image/svg+xml">
 
   <!-- 
+    - Google fonts link
+  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  
+  <!-- 
     - custom css link
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
