--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
   <!--- favicon-->
-  <link rel="shortcut icon" href="favicon-relax.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="favIcon-relax.webp" type="image/svg+xml">
 
   <!-- 
     - Google fonts link
