--- a/fitness.html
+++ b/fitness.html
@@ -11,7 +11,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="favicon.webp" type="image/svg+xml">
 
   <!-- 
     - Google fonts link
