--- a/treatments.html
+++ b/treatments.html
@@ -11,7 +11,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="favicon-relax.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="favIcon-relax.webp" type="image/svg+xml">
 
   <!-- 
     - Google fonts link
