modified logo size

--- a/wellness.html
+++ b/wellness.html
@@ -60,7 +60,7 @@
   <header class="header" data-header>
     <div class="container">
       <a href="treatments.html" class="logo">
-        <img src="./assets/images/class-yoga-massage.png" alt="">
+        <img src="./assets/images/class-yoga-massage.png" alt="logo" width="98" height="98">
         <span class="span">Treatments</span>
       </a>
 
@@ -673,7 +673,7 @@
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
     Top
   </a>
-  
+
   <!--- custom js link-->
   <script src="./assets/js/script.js" defer></script>
 
