--- a/index.html
+++ b/index.html
@@ -651,20 +651,22 @@
           </li>
 
           <li class="footer-list-item">
-              <a target="_blank" href="https://www.facebook.com/letsrelaxstockholm" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon> </a> 
+          
+              <a target="_blank" href="https://www.facebook.com/letsrelaxstockholm" class="social-link" aria-label="facebook">
+              <ion-icon name="logo-facebook"></ion-icon></a>
               <p>Facebook</p>
+            
           </li>
 
           <li class="footer-list-item">
-            <a target="_blank" href="https://www.instagram.com/let_s_relax_stockholm" class="social-link">
+            <a target="_blank" href="https://www.instagram.com/let_s_relax_stockholm" class="social-link" aria-label="instagram">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
             <p>Instagram</p>
           </li>
 
           <li class="footer-list-item">
-            <a target="_blank" href="https://www.linkedin.com/in/kunnikar/" class="social-link">
+            <a target="_blank" href="https://www.linkedin.com/in/kunnikar/" class="social-link" aria-label="linkedin">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
             <p>Linkedin</p>
