--- a/wellness.html
+++ b/wellness.html
@@ -639,8 +639,8 @@
 
           <li class="footer-list-item">
               <a target="_blank" href="https://www.facebook.com/letsrelaxstockholm" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon> </a> 
-              <p>Facebook</p>
+              <ion-icon name="logo-facebook"></ion-icon><p>Facebook</p> </a> 
+              
           </li>
 
           <li class="footer-list-item">
