modified image size

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 410; --height: 240;">
-                  <img src="./assets/images/sports.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/sports.webp" width="250" height="250" loading="lazy" alt="Sport Massage"
                     class="img-cover">
                 </figure>
 
@@ -172,7 +172,7 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/reflexology-foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/reflexology-foot-massage.webp" width="250" height="250" loading="lazy" alt="Reflexology"
                     class="img-cover">
                 </figure>
 
@@ -203,7 +203,7 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/Office syndrome.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/Office syndrome.webp" width="250" height="250" loading="lazy" alt="Neck & Shoulder massage"
                     class="img-cover">
                 </figure>
 
@@ -234,7 +234,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/Yoga-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/Yoga-massage.webp" width="250" height="250" loading="lazy" alt="Yoga Massage"
                     class="img-cover">
                 </figure>
 
@@ -265,7 +265,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/stretch.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/stretch.webp" width="250" height="250" loading="lazy" alt="Stretch Massage"
                     class="img-cover">
                 </figure>
 
@@ -296,7 +296,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/back&foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/back&foot-massage.webp" width="250" height="250" loading="lazy" alt="foot-massage"
                     class="img-cover">
                 </figure>
 
@@ -327,7 +327,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/hotoil.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/hotoil.webp" width="250" height="250" loading="lazy" alt="hot oil massage"
                     class="img-cover">
                 </figure>
 
@@ -358,7 +358,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/aromatherapy-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/aromatherapy-massage.webp" width="250" height="250" loading="lazy" alt="aromatherapy-massage"
                     class="img-cover">
                 </figure>
 
@@ -372,7 +372,7 @@
                   <p class="card-text">
                    This therapy has been known to promote relaxation and a sense of calm in the body, which is half the work done towards healing. For relaxation and stress relief.  
                   </p> 
-                  <a class="readMore" href="treatments.html #hotoil">Read More...</a>
+                  <a class="readMore" href="treatments.html #aroma">Read More...</a>
                   <p class="card-price">
                       800 kr. (30 min)
                       1600 kr. (60 min)
