--- a/fitness.html
+++ b/fitness.html
@@ -114,18 +114,12 @@
               At Let's Relax Stockholm, we believe in a holistic approach to health. Whether you're an athlete, a weekend warrior, or someone looking to stay fit and stress-free, combining fitness and massage therapy can help you achieve optimal results.
             </p>
 
-
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Let's Relax 💆🏻‍♀️</a>
 
           </div>
 
           <div class="hero-banner">
             <img src="./assets/images/about-banner-woman-yoga.webp" width="660" height="753" alt="hero banner" class="w-100" >
-
-            <img src="./assets/images/hero-circle-one.png" width="366" height="366" aria-hidden="true" alt=""
-              class="circle circle-1">
-            <img src="./assets/images/hero-circle-two.png" width="366" height="366" aria-hidden="true" alt=""
-              class="circle circle-2" >
              
           </div>
         </div>
@@ -354,7 +348,7 @@
       <!-- /*************************/ -->
        
       <!--- #BLOG-2-->
-      <section class="section blog has-bg-image" id="blog-2" aria-label="Diet and Lifestyle Tips for a Healthy You">
+      <section class="blog has-bg-image" id="blog-2" aria-label="Diet and Lifestyle Tips for a Healthy You">
         <div class="container">
           <h2 class="h2 section-title text-center" id="blog-2">Diet and Lifestyle Tips for a Healthy You</h2>
 
